--- a/Projects/Cronus/Cronus/Pages/PageHome.xaml
+++ b/Projects/Cronus/Cronus/Pages/PageHome.xaml
@@ -6,9 +6,9 @@
       xmlns:local="clr-namespace:Cronus.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageHome" Background="Gray">
+      Title="PageHome" Background="Gray" Loaded="Page_Loaded">
 
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-        <TextBlock Text="Welcome to Cronus!" Foreground="Black" FontSize="20" FontWeight="Bold"/>
+        <TextBlock Text="{Binding VersionTitle}" Foreground="Black" FontSize="20" FontWeight="Bold" Loaded="TextBlock_Loaded"/>
     </Grid>
 </Page>
