Color and Navigation
create styles.xaml to centralize used colors, binded the navigation

--- a/Projects/Cronus/Cronus/MainWindow.xaml
+++ b/Projects/Cronus/Cronus/MainWindow.xaml
@@ -6,18 +6,19 @@
         xmlns:local="clr-namespace:Cronus"
         mc:Ignorable="d"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Cronus by github.com/realTobby/Cronus (ZPL Editor)" Height="450" Width="800">
+        Title="Cronus by github.com/realTobby/Cronus (ZPL Editor)" Height="450" Width="800" WindowTitleBrush="{StaticResource stylecolor_mainaccent}">
 
-    <Grid x:Name="grid_main">
+    <Grid x:Name="grid_main" Background="{StaticResource stylecolor_mainaccent}">
         <DockPanel LastChildFill="True">
-            <mah:MetroTabControl x:Name="menu" SelectionChanged="menu_SelectionChanged" Style="{DynamicResource MahApps.Styles.TabControl.Animated}" TabStripPlacement="Left">
+            <mah:MetroTabControl x:Name="menu" Background="{StaticResource stylecolor_mainaccent}"  SelectionChanged="menu_SelectionChanged" Style="{DynamicResource MahApps.Styles.TabControl.Animated}" TabStripPlacement="Left">
+
                 <mah:MetroTabItem x:Name="menu_home" Header="Home" />
                 <mah:MetroTabItem x:Name="menu_new" Header="New"/>
                 <mah:MetroTabItem Header="Load"/>
                 <mah:MetroTabItem Header="Edit"/>
                 <mah:MetroTabItem Header="Print"/>
             </mah:MetroTabControl>
-            <Frame x:Name="mainFrame" Source="/Pages/PageHome.xaml" NavigationUIVisibility="Hidden"/>
+            <Frame x:Name="mainFrame" Source="{Binding CurrentView}" NavigationUIVisibility="Hidden"/>
         </DockPanel>
         
     </Grid>
