--- a/Projects/Cronus/Cronus/Pages/PageEdit.xaml
+++ b/Projects/Cronus/Cronus/Pages/PageEdit.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:Cronus.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageEdit">
+      Title="PageEdit"
+      Background="#F3F1F5">
 
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock Text="Edit Page!" Foreground="Black" FontSize="20" FontWeight="Bold"/>
