--- a/Projects/Cronus/Cronus/Pages/PageNew.xaml
+++ b/Projects/Cronus/Cronus/Pages/PageNew.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Cronus.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageNew">
+      Title="PageNew" Background="#F3F1F5">
 
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock Text="New Page" Foreground="Black" FontSize="20" FontWeight="Bold"/>
