--- a/Projects/Cronus/Cronus/Pages/PageHome.xaml
+++ b/Projects/Cronus/Cronus/Pages/PageHome.xaml
@@ -9,6 +9,14 @@
       Title="PageHome" Background="#F3F1F5" Loaded="Page_Loaded">
 
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-        <TextBlock Text="{Binding VersionTitle}" Foreground="Black" FontSize="20" FontWeight="Bold" Loaded="TextBlock_Loaded"/>
+        <StackPanel >
+            <TextBlock Text="Welcome to Cronus!" Margin="30,30,30,30" Foreground="Black" FontSize="20" FontWeight="Bold"  HorizontalAlignment="Center"/>
+            
+            <TextBlock Text="ZPL Editor" Foreground="Black" FontSize="20" FontWeight="Bold"  HorizontalAlignment="Center"/>
+            <TextBlock Text="made by realTobby" Foreground="Black" FontSize="20" FontWeight="Bold"  HorizontalAlignment="Center"/>
+            <TextBlock Text="Start by creating a new Template!" Margin="30,30,30,30" Foreground="Black" FontSize="20" FontWeight="Bold"  HorizontalAlignment="Center"/>
+
+        </StackPanel>
+        
     </Grid>
 </Page>
