--- a/Projects/Cronus/Cronus/Pages/PageNew.xaml
+++ b/Projects/Cronus/Cronus/Pages/PageNew.xaml
@@ -6,9 +6,30 @@
       xmlns:local="clr-namespace:Cronus.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageNew" Background="#F3F1F5">
+      Title="PageNew" Background="{StaticResource stylecolor_mainaccent}">
 
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-        <TextBlock Text="New Page" Foreground="Black" FontSize="20" FontWeight="Bold"/>
+        <StackPanel>
+            <TextBlock Text="Create new ZPL Template" Foreground="Black" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center"/>
+
+            <DockPanel LastChildFill="True" x:Name="dock_projectName">
+                <TextBlock VerticalAlignment="Center" Text="Project Name:" HorizontalAlignment="Left"/>
+                <TextBox Text="{Binding NewProjectName}" Margin="5,5,5,5" Width="100" HorizontalAlignment="Right"/>
+            </DockPanel>
+
+            <DockPanel LastChildFill="True" x:Name="dock_author">
+                <TextBlock VerticalAlignment="Center" Text="Author:" HorizontalAlignment="Left"/>
+                <TextBox Text="{Binding NewProjectAuthor}" Margin="5,5,5,5" Width="100" HorizontalAlignment="Right"/>
+            </DockPanel>
+
+            <DockPanel LastChildFill="True" x:Name="dock_description">
+                <TextBlock VerticalAlignment="Center" Text="Description:" HorizontalAlignment="Left"/>
+                <TextBox Text="{Binding NewProjectDescription}" Margin="5,5,5,5" Width="100" HorizontalAlignment="Right"/>
+            </DockPanel>
+
+            <Button x:Name="btn_create_new" Content="Create new" Margin="15,15,15,15" Click="btn_create_new_Click"/>
+
+        </StackPanel>
+        
     </Grid>
 </Page>
