--- a/Projects/Cronus/Cronus/Pages/PageLoad.xaml
+++ b/Projects/Cronus/Cronus/Pages/PageLoad.xaml
@@ -8,7 +8,20 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PageLoad" Background="#F3F1F5">
 
-    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-        <TextBlock Text="Load Page" Foreground="Black" FontSize="20" FontWeight="Bold"/>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20*"/>
+            <ColumnDefinition Width="80*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0">
+            <ListBox ItemsSource="{Binding AvailableProjects}"/>
+        </Grid>
+
+        <Grid Grid.Column="1"  HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="Load Page" Foreground="Black" FontSize="20" FontWeight="Bold"/>
+        </Grid>
+        
+        
     </Grid>
 </Page>
