--- a/Projects/Cronus/Cronus/Pages/PageLoad.xaml
+++ b/Projects/Cronus/Cronus/Pages/PageLoad.xaml
@@ -45,9 +45,9 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding RawZPLCode}"/>
+            <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding ZPLCode}"/>
 
-            <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Preview of ZPL"/>
+            <TextBlock Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Preview of ZPL"/>
             
             <StackPanel Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" >
                 <Button HorizontalAlignment="Center" Margin="10" x:Name="btn_delete_selected_project" Click="btn_delete_selected_project_Click">
