--- a/Projects/Cronus/Cronus/MainWindow.xaml
+++ b/Projects/Cronus/Cronus/MainWindow.xaml
@@ -1,13 +1,23 @@
-﻿<mah:MetroWindow x:Class="Cronus.MainWindow"
+﻿<Controls:MetroWindow x:Class="Cronus.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Cronus"
         mc:Ignorable="d"
-        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" xmlns:mah1="clr-namespace:MahApps.Metro.IconPacks;assembly=MahApps.Metro.IconPacks.Material"
-                 Title="Cronus by github.com/realTobby/Cronus (ZPL Editor)" FontFamily="Calibri" Height="450" Width="800" WindowTitleBrush="{StaticResource stylecolor_foreground}">
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" xmlns:iconPacks="clr-namespace:MahApps.Metro.IconPacks;assembly=MahApps.Metro.IconPacks.Material" xmlns:converters="clr-namespace:MahApps.Metro.IconPacks.Converter;assembly=MahApps.Metro.IconPacks.Core" xmlns:local1="clr-namespace:Cronus.DraggableControls"
+                      Title="Cronus by github.com/realTobby/Cronus (ZPL Editor)" FontFamily="Calibri" Height="450" Width="800" WindowTitleBrush="{StaticResource stylecolor_foreground}">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="10*" />
+            <ColumnDefinition Width="90*" />
+        </Grid.ColumnDefinitions>
+
+        <Button Grid.Column="0" x:Name="btn_add_element" Click="btn_add_element_Click" Content="Add Element"/>
+
+        <Canvas Background='Beige' Name='canvas' Grid.Column="1">
+            <Rectangle Width='50' Height='50' Fill='LightPink' Canvas.Left='350' Canvas.Top='175' MouseMove='Rectangle_MouseMove' />
+        </Canvas>
+
     </Grid>
-</mah:MetroWindow>
+</Controls:MetroWindow>
