--- a/Projects/Cronus/Cronus/MainWindow.xaml
+++ b/Projects/Cronus/Cronus/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Cronus"
         mc:Ignorable="d"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" xmlns:iconPacks="clr-namespace:MahApps.Metro.IconPacks;assembly=MahApps.Metro.IconPacks.Material" xmlns:converters="clr-namespace:MahApps.Metro.IconPacks.Converter;assembly=MahApps.Metro.IconPacks.Core" xmlns:local1="clr-namespace:Cronus.DraggableControls"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" xmlns:iconPacks="clr-namespace:MahApps.Metro.IconPacks;assembly=MahApps.Metro.IconPacks.Material" xmlns:converters="clr-namespace:MahApps.Metro.IconPacks.Converter;assembly=MahApps.Metro.IconPacks.Core"
                       Title="Cronus by github.com/realTobby/Cronus (ZPL Editor)" FontFamily="Calibri" Height="450" Width="800" WindowTitleBrush="{StaticResource stylecolor_foreground}">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -16,7 +16,6 @@
         <Button Grid.Column="0" x:Name="btn_add_element" Click="btn_add_element_Click" Content="Add Element"/>
 
         <Canvas Background='Beige' Name='canvas' Grid.Column="1">
-            <Rectangle Width='50' Height='50' Fill='LightPink' Canvas.Left='350' Canvas.Top='175' MouseMove='Rectangle_MouseMove' />
         </Canvas>
 
     </Grid>
